2002-03-26  Morten Welinder  <terra@diku.dk>

	* src/style.c (style_font_new_simple): Translate pixels to points
	properly.

	* src/style.c (style_font_new_simple): Fix misplaced #endif.

	* src/format.c (format_value): Fix general display of floats.
	Oops.

	* src/value.c (value_release): Use the fact that VALUE_TERMINATE
	is an error value.

2002-03-26  Morten Welinder  <terra@diku.dk>

	* src/value.c (value_new_bool, value_new_int, value_release): Use
	int/bool pool.
	(value_init): Initialise int/bool pool.
	(value_shutdown): Free int/bool pool.

	* src/gutils.c (gnm_mem_chunk_new): Use smaller alignment when
	known to be possible.

2002-03-26  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/workbook-control-gui.c : added insert-function menu item

2002-03-26  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* schemas/ : new directory for schema files
	* schemas/gnumeric-dialogs.schemas : file for gconf configuration
	  variables used by the gnumeric dialogs
	
2002-03-25  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* gui-util.[ch] (focus_on_entry) : new
	* src/workbook-control-gui.c (cb_file_summary) : delete unused
	  variable

2002-03-25  Morten Welinder  <terra@diku.dk>

	* src/format.c (format_value): Strip signs when conditional
	formats are in use.

2002-03-25  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/commands.[hc] : implement cmd_change_summary
	* src/summary.[hc] : constify arguments
	(summary_item_free) : make public, handle NULL argument
	(summary_item_copy) : new
	(summary_item_by_name) : new
	(summary_item_as_text_by_name) : new
	* src/workbook-control-gui.c (cb_file_summary) : delete unused
	  variable, add argument to dialog_summary_update
	* src/workbook.c (workbook_set_filename) : update summary dialog

2002-03-25  Morten Welinder  <terra@diku.dk>

	* src/format.c (StyleFormatEntry): Make the value field a
	gnum_float at intended.

	* src/main.c (main): Call g_set_prgname.
	(main): Call value_init and value_shutdown appropriately.
