@@ -280,7 +280,7 @@ gnumeric_cell (FunctionEvalInfo *ei, Value **argv)
 		double charwidth;
 		int    cellwidth;
 
-		charwidth = gnumeric_default_font->approx_width.pts;
+		charwidth = gnumeric_default_font->approx_width.pts.digit;
 		cellwidth = info->size_pts;
 
 		return value_new_int (rint (cellwidth / charwidth));
