@@ -42,11 +42,13 @@ typedef enum _StyleOrientation {
 struct _StyleFont {
 	int	 ref_count;
 	char	*font_name;
-	float	 size_pts;
-	float	 scale;
+	double	 size_pts;
+	double	 scale;
 	struct {
-		float pixels;   /* this does not belong here */
-		float pts;
+		/* This does not belong here.  */
+		struct {
+			double digit, decimal, sign, E, e;
+		} pixels, pts;
 	} approx_width;
 	struct {
 		PangoContext		*context;
@@ -71,7 +73,6 @@ StyleFont     *style_font_new_simple  (const char *font_name,
 				       gboolean bold, gboolean italic);
 GdkFont       *style_font_gdk_font    (StyleFont const *sf);
 int            style_font_get_height  (StyleFont const *sf);
-float	       style_font_get_width_pts(StyleFont const *sf);
 void           style_font_ref         (StyleFont *sf);
 void           style_font_unref       (StyleFont *sf);
 
